--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "ts": "tsc --watch",
-    "dev": "node --watch ./dist",
+    "dev": "node --watch ./",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -25,7 +24,6 @@
     "@types/cookie-parser": "^1.4.7",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
-    "@types/node": "^22.7.5",
-    "typescript": "^5.6.3"
+    "@types/node": "^22.7.5"
   }
 }
