--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "node --watch ./",
+    "dev": "node  --watch ./ --env=.env.development",
+    "prod": "node  --watch ./ --env=.env.production",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
